--- a/model.tex
+++ b/model.tex
@@ -1,13 +1,13 @@
 % lineal model
 
-objective \\
-&\min\sum_{i\in I, t \in T} u_{i,t} \\
 def \\
 d_{i,t} &: \text{demand forecast on the day t in store i}\\
 e_{i,t} &: \text{number of units shipped on t to the store i }\\
 u_{i,t} &: \text{number of unfulfilled orders the day t to store i}\\
 s_{i,t} &: \text{units in inventory the day t in store i}\\
 {bu}_{i,t} &: \text{binary variable to codify max of the unfulfilled var}\\
+model \;\;\\
+(objective)&\min\sum_{i\in I, t \in T} u_{i,t} \\
 st \\
 \text{initial inventory}: s_{i,0} &= 20 \;\forall i \in I \\
 \text{inventory ecuation}: s_{i,t} &= s_{i,t-1} + e_{i,t-1} - d_{i,t-1} + u_{i,t-1}\\
